--- a/.gitignore
+++ b/.gitignore
@@ -51,9 +51,13 @@ typings/
 # Output of 'npm pack'
 *.tgz
 
+#Bundle.js
+client/src/private/public/bundle.js
+
 # Yarn Integrity file
 .yarn-integrity
 
 # dotenv environment variables file
 .env
+
 
