--- a/package.json
+++ b/package.json
@@ -28,12 +28,13 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "express": "^4.15.4",
+    "mongoose": "^4.11.6",
     "mysql": "^2.14.1",
-    "nodejs": "0.0.0",
     "nodemon": "^1.11.0",
     "path": "^0.12.7",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "request": "^2.81.0",
     "webpacks": "0.0.2"
   }
 }
